# libmicroi18n

./: .gitignore  ReadME.md  ReadME_zh_CN.md  config.yaml
fonts/: basic.yaml  dingmao.yaml  special.yaml
langs/en/: en.yml
langs/zh_CN/: zh_CN.yml
scripts/: bootstrap.sh  build_all.sh  cleanup.sh  generate.py  requirements.txt
usage_demo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  microi18n.hpp
